2007-09-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-07
	* don't start building work-loop in configure state-transition:
	the queue will otherwise be filled with RANDOM events at the
	beginning even in PLAYBACK mode.

2007-08-28  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-05-06
	* adjust to new XMAS-ready version of Utilities/WebGUI

2007-08-27  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-05-05
	* fix initialize script, make respective parameters in *.cfg files
	untracked.
	
2007-08-21  Emilio Meschi  <emilio.meschi@cern.ch>
		
	* tag V00-05-03
	* adjust the initialize script for changes in DaqSource and StorageManager

2007-07-19  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-05-02
	* all changes concern initialize script
	* have SM write output to /tmp/$USER/sm
	
2007-07-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-05-01
	* adjust the initialize script to xdaq3.9: no monitoring for the
	time being
	* tested to run on slc4 lxplus node

2007-05-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-11
	* fix potential dead-lock, avoid call to WebGUI::lockInfoSpaces()
	* add parameter 'firstEvent', specifying the number assigned to
	the first event in RANDOM mode.
	* add Monitor applications to all executives, add another
	executive for a collection Monitor (port 40003), and have flash
	lists generated by scripts/initialize. The Monitor collector needs
	to be activated over the webpage.

2007-04-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-10
	* scripts/initialize: remove two parameters from the
	StorageManager configuration (streamerOnly and oneinN).

2007-04-27  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-09
	* add counters nbEventsRequested, nbEventsSent
	* fix stopping/halting bug: need to call postSend(); postBuild();